# Projects

./: README.md
ImageChanger/: PNMreader.C  PNMreader.h  PNMwriter.C  PNMwriter.h  README.md  README.txt  filter.C  filter.h  filters.C  filters.h  image.C  image.h  log.txt  logging.C  logging.h  main3G.C  makefile  ntd.txt  proj3G  sink.C  sink.h  source.C  source.h
ProjectEuler/: README.md
ProjectEuler/Java Program/src/: ColorButtonsPanel.java  Main.java  MainFrame.java  PaintPanel.java  Point.java  SizeButtonsPanel.java
ProjectEuler/problem12/: main.java
ProjectEuler/problem13/: main.java
ProjectEuler/problem3/: problem3.java
ProjectEuler/problem4/: main.java
ProjectEuler/problem8/: main.java
ProjectEuler/problem9/: Primes.java  main.java
VTK Projects/: README.md  README.txt
VTK Projects/proj1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj1.cxx
VTK Projects/proj2/proj2/: .proj2.cpp.swo  .proj2.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VTK Projects/proj3/: CMakeCache.txt  CMakeLists1.txt  Makefile  cmake_install.cmake  proj2.cpp  proj3.cpp
VTK Projects/proj3/differencer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VTK Projects/proj4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj4.cpp
VTK Projects/proj6/: .proj6.vtk.swp  CMakeLists.txt  Makefile  cmake_install.cmake  proj6.cpp
VTK Projects/proj6A/: CMakeCache.txt  proj6.cpp  tricaseDone.cxx
VTK Projects/proj7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj7.cpp
(+3 files in other folders)
